# monkey-bubble

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  NEWS.md  README.md  autogen.sh  configure.in  monkey-bubble.desktop.in  monkey-bubble.desktop.in.in  monkey-bubble.doap
data/: .cvsignore  .gitignore  Makefile.am  com.nokia.monkey_bubble.service.in  keybinding.ui  monkey-bubble.glade  monkey-bubble.ui  netgame.glade  netgame.ui  netserver.glade  netserver.ui  org.gnome.Games.MonkeyBubble.service.in
debian/: changelog  control  control.in  copyright  menu  monkey-bubble.sgml  monkey-srv.sgml  postinst  rules
help/: .gitignore  ChangeLog  Makefile.am  monkey-bubble.omf.in
help/C/: monkey-bubble.xml
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: .cvsignore  fr.po
help/ja/: .gitignore  ja.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
libgnome/: Makefile.am  gnome-score.c
libgnomeui/: Makefile.am  gnome-scores.c  linktest.c
pixmaps/: Makefile.am  monkey-bubble.xpm
pixmaps/bubbles/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  ja.po  lv.po  ms.po  nb.po  ne.po  nl.po  oc.po  pa.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sl.po  sr.po  sr@Latn.po  sr@latin.po  sv.po  tr.po  uk.po  (+3 more)
sounds/: Makefile.am
src/: Makefile.am
src/audio/: .cvsignore  Makefile.am  gst-mbmem-content.c  gst-mbmem-content.h  gst-mbmem-src.c  gst-mbmem-src.h  mb-audio-engine.c  mb-audio-engine.h  mb-music-bin.c  mb-music-bin.h  sound-manager.c  sound-manager.h
src/input/: Makefile.am  input-manager.c  input-manager.h  player-input.c  player-input.h
src/monkey/: .cvsignore  .gitignore  Makefile.am  board.c  board.h  bubble.c  bubble.h  color.h  monkey.c  monkey.h  playground.c  playground.h  shooter.c  shooter.h
src/net/: .cvsignore  .gitignore  Makefile.am  client.c  client.h  game-manager-proxy.c  game-manager-proxy.h  game-manager.c  game-manager.h  game.c  game.h  main.c  mb-net-abstract-handler.c  mb-net-abstract-handler.h  mb-net-client-game.c  mb-net-client-game.h  mb-net-client-match.c  mb-net-client-match.h  mb-net-client-server.c  mb-net-client-server.h  mb-net-connection.c  mb-net-connection.h  mb-net-game-handler.c  mb-net-game-handler.h  mb-net-game.c  mb-net-game.h  mb-net-handler-manager.c  mb-net-handler-manager.h  mb-net-handler.c  mb-net-handler.h  mb-net-holders.c  mb-net-holders.h  mb-net-match-handler.c  mb-net-match-handler.h  mb-net-match.c  mb-net-match.h  mb-net-message.c  mb-net-message.h  mb-net-server-handler.c  mb-net-server-handler.h  (+18 more)
src/tests/: Makefile.am
src/tests/net/: Makefile.am  main.c  mb-tests-net-client-game.c  mb-tests-net-client-game.h  mb-tests-net-client-match.c  mb-tests-net-client-match.h  mb-tests-net-client-server.c  mb-tests-net-client-server.h  mb-tests-net-connection.c  mb-tests-net-connection.h  mb-tests-net-game-handler.c  mb-tests-net-game-handler.h  mb-tests-net-game.c  mb-tests-net-game.h  mb-tests-net-handler.c  mb-tests-net-handler.h  mb-tests-net-match-handler.c  mb-tests-net-match-handler.h  mb-tests-net-message.c  mb-tests-net-message.h  mb-tests-net-server-handler.c  mb-tests-net-server-handler.h  mb-tests-net-server.c  mb-tests-net-server.h  mb-tests-net-utils.c  mb-tests-net-utils.h
src/ui/: .cvsignore  Makefile.am  eggcellrendererkeys.c  game-1-player-manager.c  game-1-player.c  game-1-player.h  game-2-player-manager.c  game-2-player.c  game-network-player-manager.c  game-network-player-manager.h  game-network-player.c  game-network-player.h  game-sound.c  game-sound.h  game.c  global.h  keyboard-properties.c  main.c  mb-ui-net-game-manager.c  mb-ui-net-game-manager.h  mb-ui-net-game.c  mb-ui-net-game.h  mb-ui-net-player-list.c  mb-ui-net-player-list.h  mb-ui-net.c  mb-ui-net.h  network-game-launcher.c  network-game-launcher.h  network-server-launcher.c  network-server-launcher.h  state.c  state.h  ui-main.c  ui-main.h  ui-network-client.c  ui-network-client.h  ui-network-server.c  ui-network-server.h
src/util/: clock.c  clock.h
src/view/: Makefile.am  mini-view.c  mini-view.h  monkey-canvas.c  monkey-view.c  monkey-view.h
