bubblesdir = $(datadir)/monkey-bubble/gfx/bubbles
bubbles_DATA = \
	bubble_01.svg \
	bubble_02.svg \
	bubble_03.svg \
	bubble_04.svg \
	bubble_05.svg \
	bubble_06.svg \
	bubble_07.svg \
	bubble_08.svg \
	little_bubble_01.svg \
	little_bubble_02.svg \
	little_bubble_03.svg \
	little_bubble_04.svg \
	little_bubble_05.svg \
	little_bubble_06.svg \
	little_bubble_07.svg \
	little_bubble_08.svg 

EXTRA_DIST = $(bubbles_DATA)
